# stepreduce-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: deduplicate.rs  error.rs  find_numbers.rs  lib.rs  main.rs  normalize.rs  orphans.rs  parse.rs  references.rs
test-vectors/: 00000000_290a9120f9f249a7a05cfe9c_step_000.step.min  00000006_d4fe04f0f5f84b52bd4f10e4_step_001.step.min  00000007_b33a147f86da49879455d286_step_000.step.min  00000008_9b3d6a97e8de4aa193b81000_step_000.step.min  00000009_9b3d6a97e8de4aa193b81000_step_001.step.min  00000016_b08aa818955948c690fd9b6d_step_001.step.min  00000020_ad34a3f60c4a4caa99646600_step_000.step.min  00000021_ad34a3f60c4a4caa99646600_step_001.step.min  00000022_ad34a3f60c4a4caa99646600_step_002.step.min  00000029_ad34a3f60c4a4caa99646600_step_009.step.min  00000031_ad34a3f60c4a4caa99646600_step_011.step.min  00000034_ad34a3f60c4a4caa99646600_step_014.step.min  00000038_c7d977f326364e35bb5b5d27_step_001.step.min  00000039_c7d977f326364e35bb5b5d27_step_002.step.min  00000042_c7d977f326364e35bb5b5d27_step_005.step.min  00000050_80d90bfdd2e74e709956122a_step_000.step.min  00000052_666139e3bff64d4e8a6ce183_step_001.step.min  00000058_666139e3bff64d4e8a6ce183_step_007.step.min  00000061_767e4372b5f94a88a7a17d90_step_002.step.min  00000063_767e4372b5f94a88a7a17d90_step_004.step.min  00000068_767e4372b5f94a88a7a17d90_step_009.step.min  00000069_767e4372b5f94a88a7a17d90_step_010.step.min  00000070_767e4372b5f94a88a7a17d90_step_011.step.min  00000072_767e4372b5f94a88a7a17d90_step_013.step.min  00000073_767e4372b5f94a88a7a17d90_step_014.step.min  00000076_767e4372b5f94a88a7a17d90_step_017.step.min  00000077_767e4372b5f94a88a7a17d90_step_018.step.min  00000078_767e4372b5f94a88a7a17d90_step_019.step.min  00000079_767e4372b5f94a88a7a17d90_step_020.step.min  00000090_169bec34317b46e98eb1a403_step_002.step.min  00000091_169bec34317b46e98eb1a403_step_003.step.min  00000092_169bec34317b46e98eb1a403_step_004.step.min  00000093_169bec34317b46e98eb1a403_step_005.step.min  00000095_79c7c1db73274f22b599eef0_step_000.step.min  00000102_5ed74bccca6f4e89829bcb5e_step_002.step.min  00000103_52f7124261ae4c558f800775_step_000.step.min  00000104_52f7124261ae4c558f800775_step_001.step.min  00000105_52f7124261ae4c558f800775_step_002.step.min  00000106_52f7124261ae4c558f800775_step_003.step.min  00000107_601f37ef630741969a417e51_step_000.step.min  (+45 more)
tests/: test_vectors.rs
validation/: Cargo.toml
validation/.cargo/: config.toml
validation/src/: lib.rs
validation/testfiles/: README.md  pico.step
validation/tests/: testfiles.rs
