[package]
name = "stepreduce-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "stepreduce"
path = "src/lib.rs"

[[bin]]
name = "stepreduce"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
log = "0.4"
regex = "1"

[dev-dependencies]
datatest-stable = "0.3"
env_logger = "0.11"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow", "dep:env_logger"]

[[test]]
name = "test_vectors"
harness = false

# Optimize dependencies in dev/test builds — regex is extremely slow without this.
[profile.dev.package."*"]
opt-level = 2
[profile.test.package."*"]
opt-level = 2
